; ModuleID = '/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_auth.c_mysqlnd_pam_auth_get_auth_data.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_auth.c_mysqlnd_pam_auth_get_auth_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_mysqlnd_authentication_plugin = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.st_mysqlnd_authentication_plugin*, i64*, i32*, i8*, i8*, i64, i32*, i64, i32*, i32*, i32)* @mysqlnd_pam_auth_get_auth_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @mysqlnd_pam_auth_get_auth_data(%struct.st_mysqlnd_authentication_plugin* %0, i64* %1, i32* %2, i8* %3, i8* %4, i64 %5, i32* %6, i64 %7, i32* %8, i32* %9, i32 %10) #0 {
  %12 = alloca %struct.st_mysqlnd_authentication_plugin*, align 8
  %13 = alloca i64*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i32, align 4
  %23 = alloca i32*, align 8
  store %struct.st_mysqlnd_authentication_plugin* %0, %struct.st_mysqlnd_authentication_plugin** %12, align 8
  store i64* %1, i64** %13, align 8
  store i32* %2, i32** %14, align 8
  store i8* %3, i8** %15, align 8
  store i8* %4, i8** %16, align 8
  store i64 %5, i64* %17, align 8
  store i32* %6, i32** %18, align 8
  store i64 %7, i64* %19, align 8
  store i32* %8, i32** %20, align 8
  store i32* %9, i32** %21, align 8
  store i32 %10, i32* %22, align 4
  store i32* null, i32** %23, align 8
  %24 = load i8*, i8** %16, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %34

26:                                               ; preds = %11
  %27 = load i64, i64* %17, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %26
  %30 = load i8*, i8** %16, align 8
  %31 = load i64, i64* %17, align 8
  %32 = call i64 @zend_strndup(i8* %30, i64 %31)
  %33 = inttoptr i64 %32 to i32*
  store i32* %33, i32** %23, align 8
  br label %34

34:                                               ; preds = %29, %26, %11
  %35 = load i64, i64* %17, align 8
  %36 = load i64*, i64** %13, align 8
  store i64 %35, i64* %36, align 8
  %37 = load i32*, i32** %23, align 8
  ret i32* %37
}

declare dso_local i64 @zend_strndup(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
